# SunGoldMiner

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
frontend/: package.json
src/: main.rs
