[package]
name = "sun_gold_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
modbus = "1.0.4"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
phf = { version = "0.10.1", features = ["macros"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }